--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -68,7 +68,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-nespaper-o fa-stack-1x fa-inverse"></i>
+                            <i class="fa fa-newspaper fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">NOTICICAS</h4>
                         <p class="text-muted">Descubre los mejores tips o consejos para comprar y vender vivienda.</p>
@@ -257,12 +257,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
 
-                <form action="index.html/registrar" method="post">
+                <form action="/registrar" method="post">
                     <input class="form-control" type="number" name="id">
-                    <input class="form-control" name="nombre" type="text">
+                    <input class="form-control" type="text" name="nombre">
                     <input class="form-control" type="text" name="apellido">
                     <input class="form-control" type="text" name="apellido2">
                     <button type="submit">Enviar</button>
