--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -531,14 +531,14 @@
     <section class="page-section" id="contact">
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h2 class="section-heading text-uppercase">Datos personales</h2>
         </div>
 
         <form action="/registrar" method="post">
-          <input class="form-control" type="number" name="id" />
-          <input class="form-control" type="text" name="nombre" />
-          <input class="form-control" type="text" name="apellido" />
-          <input class="form-control" type="text" name="apellido2" />
+          <input class="form-control mt-4" type="number" name="id" placeholder="cedula"/>
+          <input class="form-control mt-4" type="text" name="nombre" placeholder="nombre"/>
+          <input class="form-control mt-4" type="text" name="apellido" placeholder="Apellido"/>
+          <input class="form-control mt-4" type="text" name="apellido2" placeholder="Segundo apellido"/>
           <button type="submit">Enviar</button>
         </form>
       </div>
@@ -1090,7 +1090,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   </body>
 </html>
